# Mycelium

./: README.md  debug.txt  fastRingMul.py  install.sh  mycelium-costs.xlsx  onion_routing_costs.xlsx
Cert-Store/: Player0.crt  Player0.csr  Player0.key  Player1.crt  Player1.csr  Player1.key  Player10.csr  Player12.crt  Player13.crt  Player13.csr  Player13.key  Player14.key  Player15.csr  Player16.crt  Player17.key  Player18.csr  Player19.csr  Player2.csr  Player22.crt  Player22.key  Player23.crt  Player25.crt  Player25.key  Player26.key  Player27.crt  Player28.key  Player29.crt  Player29.key  Player3.crt  Player31.crt  Player31.key  Player32.crt  Player34.crt  Player35.key  Player36.crt  Player37.key  Player38.crt  Player39.key  Player4.crt  Player5.key  (+6 more)
benchmarking/: ami_id.txt  benchmark_many_lwe.sh  create_ami.sh  create_keys.sh  create_players.sh  instructions.txt  readme.txt  run_test.sh  sm_lwe_image.ami_id  update_file.sh
crypto/: README.md
graphX-baseline/: README.md  build.sbt
graph_scripts/: MPC_data.txt  README.md  aggregator_bandwidth.py  aggregator_computation.py  all_graphs.sh  anonymity_set.py  bw-user.data  bw-user.plot  crypto.txt  duration.py  goodput.py  goodput_graph.py  graph_data.txt  identification.py  identification_graph.py  mpc_bandwidth.py  mpc_computation.py  mpc_liveness.py  mpc_privacy_failure.py  mpc_success.py  onion_route_failure_rate.py  onion_route_malicious_rate.py  success_data.txt  success_rate.py  success_rate_graph.py  user_bandwidth.py  user_computation.py  user_latency.py
nflbgv/: CMakeLists.txt  main.cpp  tools.h
(+289 files in other folders)
