cmake_minimum_required(VERSION 3.13)
project(bgv)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/lib/cmake/")
set(CMAKE_CXX_STANDARD 14)
add_compile_options(-fPIC)
add_compile_options(-D_GLIBCXX_USE_CXX11_ABI=0)

include_directories("/usr/local/include")

add_executable(bgv main.cpp)
target_link_libraries(bgv "/usr/local/lib/libgmp.a")
target_link_libraries(bgv "/usr/local/lib/libnfllib_static.a")
